# solis_3d

./: Cargo.toml  README.md
examples/: autotest.rs  basic.rs  msaa.rs
src/: config.rs  lib.rs  node.rs  pipeline.rs  view.rs
src/shaders/: common.wgsl  composite.wgsl  ssil.wgsl
